--- a/FoodRecommendationApp/app/src/main/AndroidManifest.xml
+++ b/FoodRecommendationApp/app/src/main/AndroidManifest.xml
@@ -13,15 +13,8 @@
         android:theme="@style/Theme.FoodRecommendationApp"
         tools:targetApi="31">
         <activity
-            android:name=".DisplayDiabeticFood"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".DiabeticActivity"
-            android:exported="false">
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
