--- a/FoodRecommendationApp/app/src/main/AndroidManifest.xml
+++ b/FoodRecommendationApp/app/src/main/AndroidManifest.xml
@@ -13,51 +13,59 @@
         android:theme="@style/Theme.FoodRecommendationApp"
         tools:targetApi="31">
         <activity
-<<<<<<< Updated upstream
+
             android:name=".CombinationFifteen"
-=======
-            android:name=".CombinationThirty"
->>>>>>> Stashed changes
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".CombinationThirty"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        </activity>
         <activity
-<<<<<<< Updated upstream
             android:name=".CombinationFourteen"
-=======
-            android:name=".CombinationTwentyNine"
->>>>>>> Stashed changes
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".CombinationTwentyNine"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        </activity>
         <activity
-<<<<<<< Updated upstream
             android:name=".CombinationTwenty"
-=======
-            android:name=".CombinationTwentyEight"
->>>>>>> Stashed changes
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".CombinationTwentyEight"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        </activity>
         <activity
-<<<<<<< Updated upstream
             android:name=".CombinationNineteen"
-=======
-            android:name=".CombinationTwentySeven"
->>>>>>> Stashed changes
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".CombinationTwentySeven"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        </activity>
         <activity
-<<<<<<< Updated upstream
             android:name=".CombinationEighteen"
             android:exported="false">
             <meta-data
@@ -66,13 +74,16 @@
         </activity>
         <activity
             android:name=".CombinationSixteen"
-=======
-            android:name=".CombinationTwentySix"
->>>>>>> Stashed changes
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+        </activity>
+        <activity android:name=".CombinationTwentySix"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
         </activity>
         <activity
             android:name=".CombinationThirteen"
