--- a/FoodRecommendationApp/app/build.gradle
+++ b/FoodRecommendationApp/app/build.gradle
@@ -37,6 +37,12 @@ android {
     }
 }
 
+configurations{
+    all{
+        exclude group:'androidx.lifecycle', module:'lifecycle-viewmodel-ktx'
+    }
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
